# stock-volatility-ai

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: retrain_models.yml
data/processed/: reliance_labeled.csv  reliance_labeled.parquet
frontend/app/: page.tsx
frontend/components/: JsonViewer.tsx  MetricCard.tsx  RiskBadge.tsx
frontend/lib/: api.ts
models/: HDFCBANK.pkl  ICICIBANK.pkl  INFY.pkl  RELIANCE.pkl  TCS.pkl  volatility_lgbm.pkl
src/: agentic_context.py  app.py  baseline_model.py  data_ingestion.py  explainability.py  feature_engineering.py  label_generation.py  model_inference.py  news_fetcher.py  regime_features.py  report_builder.py  risk_utils.py  split_and_checks.py  train_all_models.py  tree_model.py
src/api/: main.py  routes.py  schemas.py
